--- a/indexb.html
+++ b/indexb.html
@@ -729,7 +729,7 @@
   transition: background-color 0.3s;
   margin-top: 20px; /* 상단 여백 추가 */
 ">
-  앱 다운로드
+  섹시한여자
 </button>
     <script>
   if ('serviceWorker' in navigator) {
