--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
             서비스 종료
         </h1>
         <p class="text-lg md:text-xl text-gray-700 mb-8 rounded-lg">
-            새로운 서비스를 확인하세요!
-        </p>
-        <a href="https://crafic.netlify.app"
+            사이트 백업은 7월1일까지, 사용자 IP, 접속위치는 약관에 따라 2026/9/1일까지 저장됩니다.</p>
+        <a href="/indexb"
            class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
-            이동하기
+            백업 이동
         </a>
     </div>
 </body>
