Update email address in zepeto.html

--- a/zepeto.html
+++ b/zepeto.html
@@ -202,7 +202,7 @@
         <div class="bg-white border border-[#F2F2F7] rounded-[24px] p-5 mb-8">
             <h3 class="font-bold text-[13px] text-[#8E8E93] mb-2 uppercase tracking-wide">수신 이메일</h3>
             <div class="flex justify-between items-center">
-                <span class="text-[16px] font-semibold text-[#1C1C1E]">xx.niteowl@gmail.com</span>
+                <span class="text-[16px] font-semibold text-[#1C1C1E]">kihunzzan@gmail.com</span>
                 <button class="text-[#7C4DFF] font-bold text-[13px] bg-[#F2EEFF] px-3 py-1.5 rounded-full">변경</button>
             </div>
         </div>
